--- a/Source/WeatherApi/appsettings.json
+++ b/Source/WeatherApi/appsettings.json
@@ -5,9 +5,24 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "Serilog": {
+        "Using": [
+            "Serilog.Sinks.Console"
+        ],
+        "MinimumLevel": "Debug",
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+                    "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u3} {ThreadId:000} {Message:lj}{NewLine}{Exception}"
+                }
+            }
+        ]
+    },
     "AllowedHosts": "*",
     "Weather": {
         "City": "Brisbane",
-        "TemperatureUnit":  "C"
+        "TemperatureUnit": "C"
     }
 }
