--- a/Source/WeatherApi/Properties/launchSettings.json
+++ b/Source/WeatherApi/Properties/launchSettings.json
@@ -24,6 +24,11 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
+      "publishAllPorts": true
     }
   }
 }
