--- a/Source/WeatherUi/Dockerfile
+++ b/Source/WeatherUi/Dockerfile
@@ -1,7 +1,9 @@
 # build
 FROM node:16-alpine3.14 AS builder
+ARG webapiurl=http://localhost:9999
 WORKDIR /app
 COPY . .
+RUN sed --in-place "s,VUE_APP_WEB_API_URL=.*,VUE_APP_WEB_API_URL=$webapiurl," ./.env
 RUN npm install -g npm@8.8.0
 RUN npm install
 RUN npm run build
