Move docker engine api client

--- a/Source/DockerEngineApiClient/appsettings.json
+++ b/Source/DockerEngineApiClient/appsettings.json
@@ -20,21 +20,12 @@
     },
 
     "DockerContainerMonitoring": {
-        "RollingCsvFiles": {
-            "RollingFileInterval": "1:00:00:00",
-            "RollingFileTimePlaceholder": "{Date}",
-            "RollingFileTimeFormat": "yyyy.MM.dd",
-            "RollingFileBufferSize": 4096,
-            "RollingFileEncoding": "UTF-8"
-        },
         "Docker": {
             "Uri": "tcp://localhost:2375"
         },
         "Containers": {
-            "tap.bitmex.recorder.xbtusd": "./Data/Stats/tap.bitmex.recorder.xbtusd_{Date}.csv",
-            "tap.bitmex.recorder.ethusd": "./Data/Stats/tap.bitmex.recorder.ethusd_{Date}.csv",
-            "tap.bitmex.recorder.xrpusd": "./Data/Stats/tap.bitmex.recorder.xrpusd_{Date}.csv",
-            "tap.tools.file-monitor": "./Data/Stats/tap.tools.file-monitor_{Date}.csv"
+            "weather.api": "./Data/Stats/weather.api.csv",
+            "weather.ui": "./Data/Stats/weather.api.csv"
         }
     }
 }
