--- a/Source/DockerEngineApiClient/DockerEngineApiClient.csproj
+++ b/Source/DockerEngineApiClient/DockerEngineApiClient.csproj
@@ -26,4 +26,10 @@
     <PackageReference Include="System.Runtime.Handles" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
