--- a/Source/DockerEngineApiClient/appsettings.json
+++ b/Source/DockerEngineApiClient/appsettings.json
@@ -11,8 +11,9 @@
         ],
         "WriteTo": [
             {
-                "Name": "Debug",
+                "Name": "Console",
                 "Args": {
+                    "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
                     "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u3} {ThreadId:000} {Message:lj}{NewLine}{Exception}"
                 }
             }
@@ -25,7 +26,7 @@
         },
         "Containers": {
             "weather.api": "./Data/Stats/weather.api.csv",
-            "weather.ui": "./Data/Stats/weather.api.csv"
+            "weather.ui": "./Data/Stats/weather.ui.csv"
         }
     }
 }
